# OpenGL

./: .gitignore  CMakeLists.txt  README.md  model.json  object.json  shader.fs  shader.vs
include/: arrayLoader.hpp  camera.hpp  error.hpp  gl.hpp  interface.hpp  loader.hpp  seperator.py  shaderLoader.hpp  textureLoader.hpp
include/glad/: glad.h
include/loader/: arrayLoader.hpp  modelLoader.hpp  shaderLoader.hpp  textureLoader.hpp
lib/: CMakeLists.txt  glad.c  interface.cpp
lib/loader/: CMakeLists.txt  arrayLoader.cpp  gl.cpp  modelLoader.cpp  shaderLoader.cpp  textureLoader.cpp
nanosuit/: nanosuit.fs  nanosuit.vs
src/: mainloop.cpp
